fix: url이 아닌 uri를 파싱하도록 변경